--- a/src/AppBundle/Resources/views/module/block/icon-box.html.twig
+++ b/src/AppBundle/Resources/views/module/block/icon-box.html.twig
@@ -4,7 +4,7 @@
     </div>
     <p class="lead">
         {% trans from "product" %}
-        highlights_li_point{{ element }}
+        highlights_li_point
         {% endtrans %}
     </p>
 </div>
