remove all references of the product page

--- a/src/AppBundle/Resources/views/home/modules/herobanner.html.twig
+++ b/src/AppBundle/Resources/views/home/modules/herobanner.html.twig
@@ -22,7 +22,7 @@
         </div>
         <div class="row">
             <div class="col-xs-8">
-                <a class="btn btn-default btn-custom-color" href="{{ path('product_get', {'productId': 1}) }}">
+                <a class="btn btn-default btn-custom-color" href="#">
                     {% trans from "home" %}
                     module_herobanner_link_text
                     {% endtrans %}
