--- a/src/AppBundle/Resources/views/home/modules/information.html.twig
+++ b/src/AppBundle/Resources/views/home/modules/information.html.twig
@@ -12,7 +12,7 @@
             {% endtrans %}
         </p>
         <p>
-            <a class="btn btn-default btn-custom-color" href="{{ path('product_get', {'productId': 1}) }}">
+            <a class="btn btn-default btn-custom-color" href="#">
                 {% trans from "home" %}
                 module_info_link_text
                 {% endtrans %}
