--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -1,5 +1,5 @@
 {% extends '::base.html.twig' %}
-{% block title %}E-bike Mont-Blanc - {% endblock %}
+{% block title %}Puzzlout - {% endblock %}
 {% block stylesheets %}
     {{ parent() }}
     {% stylesheets
